--- a/projects/spike.html
+++ b/projects/spike.html
@@ -121,13 +121,13 @@ title: Spike
               </p>
               <div class="col-12">
                   {% assign image_list = "
-                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim1.png,
-                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim2.png,
-                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim3.png,
-                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim4.png,
-                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim5.png,
-                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim6.png,
-                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim7.png
+                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim1.png;Spike mechanics throw document excerpt 1,
+                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim2.png;Spike mechanics throw document excerpt 2,
+                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim3.png;Spike mechanics throw document excerpt 3,
+                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim4.png;Spike mechanics throw document excerpt 4,
+                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim5.png;Spike mechanics throw document excerpt 5,
+                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim6.png;Spike mechanics throw document excerpt 6,
+                  /assets/images/spike/design-documents/spike-mechanics-throw-aim/spike-mechanics-throw-aim7.png;Spike mechanics throw document excerpt 7
                                     " | split: "," %}
                   {% assign caption_list = "
                   Using Google Slides allows for easier teamwork,
@@ -152,15 +152,15 @@ title: Spike
               </p>
               <div class="col-12">
                   {% assign image_list = "
-                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation1.png,
-                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation2.png,
-                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation6.png,
-                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation7.png,
-                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation8.png,
-                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation9.png,
-                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation10.png,
-                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation11.png,
-                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation12.png
+                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation1.png; Spike Game Design Presentation 1,
+                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation2.png; Spike Game Design Presentation 2,
+                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation6.png; Spike Game Design Presentation 3,
+                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation7.png; Spike Game Design Presentation 4,
+                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation8.png; Spike Game Design Presentation 5,
+                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation9.png; Spike Game Design Presentation 6,
+                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation10.png; Spike Game Design Presentation 7,
+                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation11.png; Spike Game Design Presentation 8,
+                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation12.png; Spike Game Design Presentation 9,
                                     " | split: "," %}
                   {% assign caption_list = "
                   Presenting mechanics to the team,
@@ -197,10 +197,10 @@ title: Spike
               </div>
               <div class="col-lg-6">
                   {% assign image_list = "
-                  /assets/images/spike/mob-gifs/termite-idle-gif.gif,
-                  /assets/images/spike/mob-gifs/spike-catcher-idle-gif.gif,
-                  /assets/images/spike/mob-gifs/mosquitoe-idle-gif.gif,
-                  /assets/images/spike/mob-gifs/firefly-idle-gif.gif
+                  /assets/images/spike/mob-gifs/termite-idle-gif.gif;Termite monster idle animation,
+                  /assets/images/spike/mob-gifs/spike-catcher-idle-gif.gif;Spike catcher idle animation,
+                  /assets/images/spike/mob-gifs/mosquitoe-idle-gif.gif;Mosquitoe idle animation,
+                  /assets/images/spike/mob-gifs/firefly-idle-gif.gif;Firefly idle animation
                   " | split: "," %}
                   {% assign caption_list = "
                   <b>Termite</b>: a basic monster challenging dodging and throwing spikes;
@@ -233,9 +233,9 @@ title: Spike
               </div>
               <div class="col-lg-12">
                   {% assign image_list = "
-                    /assets/images/spike/design-documents/ai-design/ai-animator-spike-catcher.png,
-                    /assets/images/spike/design-documents/ai-design/ai-fsm-spike-catcher.png,
-                    /assets/images/spike/design-documents/ai-balancing.png
+                    /assets/images/spike/design-documents/ai-design/ai-animator-spike-catcher.png;Spike catcher animator,
+                    /assets/images/spike/design-documents/ai-design/ai-fsm-spike-catcher.png;Spike catcher FSM,
+                    /assets/images/spike/design-documents/ai-balancing.png;Spike catcher balancing
                   " | split: "," %}
                   {% assign caption_list = "
                   All animations phases have easy to tweak timings.;
@@ -275,9 +275,9 @@ title: Spike
               </div>
               <div class="col-lg-12">
                   {% assign image_list = "
-                  /assets/images/spike/design-documents/asset-lists/asset-list-actions-and-decisions.png,
-                  /assets/images/spike/design-documents/asset-lists/asset-list-signs-and-feedback.png,
-                  /assets/images/spike/design-documents/asset-lists/asset-list-animations-excerpt.png
+                  /assets/images/spike/design-documents/asset-lists/asset-list-actions-and-decisions.png;Notion asset list of actions & decisions,
+                  /assets/images/spike/design-documents/asset-lists/asset-list-signs-and-feedback.png;Signs & feedback asset list,
+                  /assets/images/spike/design-documents/asset-lists/asset-list-animations-excerpt.png;Animations asset list
                   " | split: "," %}
                   {% assign caption_list = "
                   AI Action and Decision Asset List to work with the AI programmer.;
