added title to iframes

--- a/projects/spike.html
+++ b/projects/spike.html
@@ -9,8 +9,8 @@ title: Spike
             <h1 class="display-1" style="font-size: max(3em, 8vw);">{{ project.title }}</h1>
             <p class="lead">{{ project.description }}</p>
         {% assign slide-content-list = "
-        video;https://www.youtube.com/embed/NL-Y3g5IYMw,
-        video;https://www.youtube.com/embed/G0qrZeRaLwk?start=4630,
+        video;https://www.youtube.com/embed/NL-Y3g5IYMw;Spike Gameplay Video,
+        video;https://www.youtube.com/embed/G0qrZeRaLwk?start=4630;Spike Jury Presentation,
         image;/assets/images/spike/spike_screen_01.png;Fighting screenshot,
         image;/assets/images/spike/spike_screen_02.png;Shop screenshot,
         image;/assets/images/spike/spike_screen_05.png;Life pool screenshot,
