contrast correction & alt correction

--- a/projects/fired-up.html
+++ b/projects/fired-up.html
@@ -285,7 +285,7 @@ title: Fired Up!
             <div class="row">
               <div class="col-12 col-md-6">
               <a href="/assets/images/fired_up/design_documents/One_Page_Burnout.png" id="pop">
-                  <img class="img-thumbnail img-fluid" id="imageresource" src="/assets/images/fired_up/design_documents/One_Page_Burnout.png">
+                  <img class="img-thumbnail img-fluid" id="imageresource" src="/assets/images/fired_up/design_documents/One_Page_Burnout.png" alt="Fired up one page">
               </a>
               <a class="badge badge-primary" href="/assets/images/fired_up/design_documents/One_Page_Burnout.png" id="pop">
                   Click to enlarge
