added role for separators

--- a/projects/spike.html
+++ b/projects/spike.html
@@ -99,10 +99,10 @@ title: Spike
           <div class="nav flex-md-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
             {% include v-pill-tab.html name="Technical documents" active="true" %}
             {% include v-pill-tab.html name="Design Presentations" %}
-            <hr class="my-1 w-100 d-none d-md-block">
+            <hr class="my-1 w-100 d-none d-md-block" role="separator">
             {% include v-pill-tab.html name="Enemy Design" %}
             {% include v-pill-tab.html name="Enemy implementation and balancing" %}
-            <hr class="my-1 w-100 d-none d-md-block">
+            <hr class="my-1 w-100 d-none d-md-block" role="separator">
             {% include v-pill-tab.html name="Fast prototyping" %}
             {% include v-pill-tab.html name="Feature and asset lists" %}
           </div>
