fixed extra slide bug in spike.html

--- a/projects/spike.html
+++ b/projects/spike.html
@@ -160,8 +160,7 @@ title: Spike
                   /assets/images/spike/design-documents/game-design-presentation/game-design-presentation9.png; Spike Game Design Presentation 6,
                   /assets/images/spike/design-documents/game-design-presentation/game-design-presentation10.png; Spike Game Design Presentation 7,
                   /assets/images/spike/design-documents/game-design-presentation/game-design-presentation11.png; Spike Game Design Presentation 8,
-                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation12.png; Spike Game Design Presentation 9,
-                                    " | split: "," %}
+                  /assets/images/spike/design-documents/game-design-presentation/game-design-presentation12.png; Spike Game Design Presentation 9" | split: "," %}
                   {% assign caption_list = "
                   Presenting mechanics to the team,
                   Reference technical documentation to explain how it works and give it more exposure,
