--- a/projects/xdefiant.html
+++ b/projects/xdefiant.html
@@ -4,7 +4,7 @@ title: XDefiant
 ---
 {% assign project = site.data.projects.c_xdefiant %}
 <div class="container-fluid mb-1">
-      <div class="row" style="background-image: url('/assets/images/xdefiant/pagebackground.jpg'); z-index: -1;">
+      <div class="row" style="background-image: url('/assets/images/xdefiant/pagebackground.webp'); z-index: -1;">
         <div class="offset-lg-3 col-lg-6 bg-light mt-5 p-4">
             <h1 class="display-1 mt-3" style="font-size: max(3em, 8vw);">{{ project.title }}</h1>
             <p class="lead">{{ project.description }}</p>
