xdefiant video update, interactive resume

--- a/projects/xdefiant.html
+++ b/projects/xdefiant.html
@@ -9,7 +9,7 @@ title: XDefiant
             <h1 class="display-1 mt-3" style="font-size: max(3em, 8vw);">{{ project.title }}</h1>
             <p class="lead">{{ project.description }}</p>
         {% assign slide-content-list = "
-        video;https://www.youtube-nocookie.com/embed/nmlhRFabV6w,
+        video;https://www.youtube.com/embed/VUv3ug_uHkE,
         image;/assets/images/xdefiant/xdefiant_screen_1.webp,
         image;/assets/images/xdefiant/xdefiant_screen_2.webp,
         image;/assets/images/xdefiant/xdefiant_screen_3.png,
