testing i18n on the legal page

--- a/legal.html
+++ b/legal.html
@@ -7,4 +7,4 @@ permalink: /legal/
 permalink_fr: /mentions-legales/
 ---
 
-{% translate_file legal/legal.yml %}
+<h1>{% translate_file legal/legal.yml %}</h1>
