deploy: d2df2bec0b09155c84b861ce0a02ae04dd9a238d

--- a/fr/mentions-legales/index.html
+++ b/fr/mentions-legales/index.html
@@ -69,7 +69,7 @@
   </div>
   <hr class="mb-5">
 </div>
-Mentions légales<div class="container-fluid bg-dark text-white d-flex flex-column">
+<h1>Mentions légales</h1><div class="container-fluid bg-dark text-white d-flex flex-column">
   <div class="container">
     <footer class="pt-3 mt-4 my-auto">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
