--- a/legal/index.html
+++ b/legal/index.html
@@ -69,7 +69,7 @@
   </div>
   <hr class="mb-5">
 </div>
-Legal<div class="container-fluid bg-dark text-white d-flex flex-column">
+<h1>Legal</h1><div class="container-fluid bg-dark text-white d-flex flex-column">
   <div class="container">
     <footer class="pt-3 mt-4 my-auto">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
