translation wip + redesign wip

--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 ---
 layout: home
-title: Junior Game Designer
+title: Game Designer
 
-namespace: homen
+namespace: home
 permalink: /
-permalink_fr: /
-
 ---
 {% include home.html %}
