--- a/projects/xdefiant.html
+++ b/projects/xdefiant.html
@@ -1,13 +1,19 @@
 ---
 layout: project
 title: XDefiant
+
+namespace: xdefiant
+permalink: /projects/xdefiant/
+permalink_fr: /projets/xdefiant/
 ---
-{% assign project = site.data.projects.c_xdefiant %}
+{% assign project_id = "c_xdefiant" %}
+{% assign project = site.data.projects.[project_id] %}
+{% assign tproject = site.data.i18n[site.lang].projects.[project_id] %}
 <div class="container-fluid mb-1">
       <div class="row" style="background-image: url('/assets/images/xdefiant/pagebackground.webp'); z-index: -1;">
         <div class="offset-lg-3 col-lg-6 bg-light mt-5 p-4">
-            <h1 class="display-1 mt-3" style="font-size: max(3em, 8vw);">{{ project.title }}</h1>
-            <p class="lead">{{ project.description }}</p>
+            <h1 class="display-1 mt-3" style="font-size: max(3em, 8vw);">{{ tproject.title }}</h1>
+            <p class="lead">{{ tproject.description }}</p>
         {% assign slide-content-list = "
         video;https://www.youtube.com/embed/VUv3ug_uHkE,
         image;/assets/images/xdefiant/xdefiant_screen_1.webp,
@@ -25,7 +31,7 @@ title: XDefiant
           carousel-id="fired-up-thumbnail-carousel" %}
         </div>
         <div class="col-lg-3 my-2 mt-3 sticky-lg-top py-2">
-          {% include project-info.html project=project%}
+          {% include project-info.html project=project tproject=tproject%}
         </div>
         <div class="offset-lg-3 col-lg-6 bg-light mb-5">
           <div class="mt-3 p-3">
