translation wip & navbar rework finished

--- a/projects/45-degrees.html
+++ b/projects/45-degrees.html
@@ -7,8 +7,8 @@ permalink: /projects/45-degrees/
 permalink_fr: /projets/45-degrees/
 ---
 {% assign project_id = "b_45" %}
-{% assign project = site.data.projects.[project_id] %}
-{% assign tproject = site.data.i18n[site.lang].projects.[project_id] %}
+{% assign project = site.data.projects[project_id] %}
+{% assign tproject = site.data.i18n[site.lang].projects[project_id] %}
 <div class="container-fluid mb-1">
   <div class="row" style="background-image: url('/assets/images/45_degrees/45_degrees_screen_5.webp'); z-index: -1;">
     <div class="mask row p-0 m-0" style="background-color: hsla(0, 0%, 0%, 0.6)">
