--- a/projects/fired-up.html
+++ b/projects/fired-up.html
@@ -7,8 +7,8 @@ permalink: /projects/fired-up/
 permalink_fr: /projets/fired-up/
 ---
 {% assign project_id = "a_fired_up" %}
-{% assign project = site.data.projects.[project_id] %}
-{% assign tproject = site.data.i18n[site.lang].projects.[project_id] %}
+{% assign project = site.data.projects[project_id] %}
+{% assign tproject = site.data.i18n[site.lang].projects[project_id] %}
 <div class="container-fluid mb-1">
       <div class="row" style="background-image: url('/assets/images/fired_up/pagebackground.webp'); z-index: -1;">
         <div class="offset-lg-3 col-lg-6 bg-light mt-5 p-4">
