--- a/projects/spike.html
+++ b/projects/spike.html
@@ -7,8 +7,8 @@ permalink: /projects/spike/
 permalink_fr: /projets/spike/
 ---
 {% assign project_id = "a_a_spike" %}
-{% assign project = site.data.projects.[project_id] %}
-{% assign tproject = site.data.i18n[site.lang].projects.[project_id] %}
+{% assign project = site.data.projects[project_id] %}
+{% assign tproject = site.data.i18n[site.lang].projects[project_id] %}
 <div class="container-fluid mb-1">
       <div class="row" style="background-image: url('/assets/images/spike/pagebackground.webp'); z-index: -1;">
         <div class="offset-lg-3 col-lg-6 bg-light mt-5 p-4">
