breadcrumbs wip + cleaning wip

--- a/projects/spike.html
+++ b/projects/spike.html
@@ -5,219 +5,5 @@ title: Spike
 namespace: spike
 permalink: /projects/spike/
 permalink_fr: /projets/spike/
-
+project_id: a_a_spike
 ---
-{% assign project_id = "a_a_spike" %}
-{% assign project = site.data.projects[project_id] %}
-{% assign tproject = site.data.i18n[site.lang].projects[project_id] %}
-
-{% assign blocks = project.detailed-blocks %}
-{% assign tblocks = tproject.detailed-blocks %}
-<script>
-  $(document).ready(function() {
-     $(".v-pills-nav-tab").click(function() {
-     $("#v-pills-tabContent").children().removeClass("show active");
-     var content = $("#v-pills-" + $(this).attr("slug-id"));
-     content.addClass("show active");
-     $("#v-pills-nav").children().children("a").removeClass("active");
-     $(this).addClass("active");
-     $("#v-pills-tab").children().removeClass("active");
-     $("#v-pills-" + $(this).attr("slug-id") + "-tab").addClass("active");
-     $('html').animate({scrollTop: $("#v-pills-tabContent").offset().top - 90}, .5);
-     
- });
-$("#v-pills-tab").children().click(function() {
-     $("#v-pills-nav").children().children("a").removeClass("active");
-     var content = $("#v-pills-nav-tab-" + $(this).attr("slug-id"));
-     content.addClass("show active");
- });
-
-});
-</script>
-<div class="container-fluid mb-1 p-0 bg-light">
-  <div class="sticky-top bg-light container-fluid align-items-center mx-auto">
-    <nav id="navbar-example2" class="navbar navbar-light bg-light mx-auto container-fat gradient-nav">
-      <a class="navbar-brand" href="#">{{tproject.title}}</a>
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a class="nav-link" href="#project-presentation">Project Presentation</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#missions">Missions</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#detailed-work" role="button"
-            aria-expanded="false">Detailed Work</a>
-          <ul class="dropdown-menu" id="v-pills-nav">
-            {% for block in blocks %}
-              {% assign block-id = block["id"] %}
-              {% assign block-title = tblocks.[block-id] %}
-              {% assign downcased = block-title | downcase | replace: " ", "-" %}
-              <li><a class="dropdown-item v-pills-nav-tab" id="v-pills-nav-tab-{{downcased}}" slug-id="{{downcased}}">{{block-title}}</a></li>
-            {% endfor %}
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#project-credits">Credits</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <div data-bs-spy="scroll" data-bs-method="position" data-bs-target="#navbar-example2" data-bs-offset="-50"
-    class="scrollspy-example" tabindex="0">
-    <div class="row" style="background-image: url('/assets/images/spike/pagebackground.webp'); z-index: -1;">
-      <div class="offset-lg-3 col-lg-6 bg-light mt-5 px-4 py-3">
-        <div id="project-presentation">
-          <h1 class=" py-1 my-6 d-inline-block" id="project-presentation">{{ tproject.title }}</h1>
-          <p class="text-muted">{{ tproject.description }}</p>
-          <div class="row">
-            {% assign slide-content-list = "
-              video;https://www.youtube-nocookie.com/embed/NL-Y3g5IYMw;Spike Gameplay Video,
-              video;https://www.youtube-nocookie.com/embed/G0qrZeRaLwk?start=4630;Spike Jury Presentation,
-              image;/assets/images/spike/spike_screen_01.png;Fighting screenshot,
-              image;/assets/images/spike/spike_screen_02.png;Shop screenshot,
-              image;/assets/images/spike/spike_screen_05.png;Life pool screenshot,
-              image;/assets/images/spike/spike_screen_09.png;Death screenshot" | split: "," %}
-            {% assign thumbnails = "
-              /assets/images/spike/spike_gameplay.png;Spike Gameplay,
-              /assets/images/spike/spike_jury_presentation.png;Spike Jury Presentation,
-              /assets/images/spike/spike_screen_01.png;Screenshot 1,
-              /assets/images/spike/spike_screen_02.png;Screenshot 2,
-              /assets/images/spike/spike_screen_05.png;Screenshot 3,
-              /assets/images/spike/spike_screen_09.png;Screenshot 4" | split: "," %}
-            {% include thumbnail-carousel.html slide-content=slide-content-list
-                thumbnail-images=thumbnails
-                carousel-id="spike-thumbnail-carousel" %}
-            <div class="col-lg-6 bg-light">
-              <div class="mt-3 p-3">
-                {% tf projects/spike/ksp.md %}
-              </div>
-            </div>
-            <div class="col-lg-6 bg-light">
-              <div class="mt-3 p-3">
-                {% tf projects/spike/combat-design-intentions.md %}
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="missions">
-          <h2 class="p-2 d-inline" id="missions">My missions</h2>
-          <div class="row my-2">
-            <hr class="col-12">
-            <div class="col-12 col-lg-6">
-              <h3>Game Design</h3>
-              <ul>
-                <li>Designing <b>core mechanics</b></li>
-                <li>Designing <b>3Cs</b></li>
-                <li>Enemy & Combat Design</li>
-                <li>Fast Prototyping</li>
-              </ul>
-            </div>
-            <div class="col-12 col-lg-6">
-              <h3>Level design</h3>
-              <ul>
-                <li><b>Creating playgrounds</b></li>
-                <li>Macro level design</li>
-              </ul>
-            </div>
-            <div class="col-12 col-lg-6">
-              <h3>Narrative design</h3>
-              <ul>
-                <li><b>Worldbuilding</b></li>
-                <li>Narrative <b>structure</b></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="col-lg-3 my-2 mt-3 sticky-lg-top py-5" style="z-index:1019;">
-        {% include project-info.html project=project tproject=tproject%}
-      </div>
-
-      <div class="offset-lg-3 col-lg-6 bg-light mb-5">
-        <div class="alert alert-primary alert-dismissible fade show" role="alert">
-          <strong>Please note</strong> this project is a <b>vertical slice</b>
-          of the 4th zone of the full game.
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-          </button>
-        </div>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row justify-content-md-center align-items-start">
-        <div class="col-md-6 p-3">
-
-        </div>
-      </div>
-      <div class="row mt-4" id="detailed-work">
-        <h2 class="col-12 col-md-9 offset-md-3">Detailed Work</h2>
-        <hr class="col-12 col-md-6 offset-md-3">
-        <div class="d-none d-md-block col-3"></div>
-        <div class="col-md-3">
-          <div class="sticky-top pt-3">
-            <div class="nav flex-md-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-              {% for block in blocks %}
-                {% assign block-id = block.id %}
-                {% assign block-title = tblocks.[block-id] %}
-                {% assign downcased = block-title | downcase | replace: " ", "-" %}
-                {% capture text %}
-                {% assign content=block.content%}
-                {% include {{block.content}} %}
-                {% endcapture%}
-              
-              {% include v-pill-tab.html name=block-title active=forloop.first %}
-              {% endfor %}
-              <hr class="my-1 w-100 d-none d-md-block" role="separator">
-              <hr class="my-1 w-100 d-none d-md-block" role="separator">
-
-            </div>
-          </div>
-        </div>
-        <hr class="d-md-none d-block w-100">
-        <div class="col-md-6 mt-3">
-          <div class="tab-content" id="v-pills-tabContent">
-            {% for block in blocks %}
-              {% assign block-id = block.id %}
-              {% assign block-title = tblocks.[block-id] %}
-              {% assign downcased = block-title | downcase | replace: " ", "-" %}
-               {% capture text %}
-               {% assign content=block.content%}
-              {% include {{block.content}} %}
-              {% endcapture%}
-            {% include v-pill-tab-content.html name=block-title content=text active=forloop.first %}
-            {% endfor %}
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container my-3 py-3">
-      {% assign credits-content = "
-      Amaury Butaux : Game Designer,
-      Charlotte Stern : Game Designer,
-      Benoît Marsili : UX/UR Designer,
-      Tristan Réamot : AI Programmer,
-      Ilan Ouamrouche : Gameplay Programmer,
-      Ludovic Aubertin : Tools Programmer,
-      Martin Rault : Character Artist,
-      Astrid Merit : Environment Artist,
-      Gabriel Sauvage : Sound & Music Designer,
-      Liam Hô : Producer,
-      : ,
-      Hélène Malherbe : Extern Animator,
-      Raphaël Bourgueil : Extern VFX Artist,
-      Blanche Périssère : Extern Rig Artist,
-      Solenn Ripoteau : Extern Environment Artist,
-      Slimane Kouidri : Musician,
-      Médéricq Debacq : Musician
-      "
-      %}
-      {% include credits.html content=credits-content %}
-    </div>
-  </div>
-
-</div>
-
-</div>
-<div class="jumbotron mt-1 pt-1">
