--- a/projects/xdefiant.html
+++ b/projects/xdefiant.html
@@ -5,52 +5,5 @@ title: XDefiant
 namespace: xdefiant
 permalink: /projects/xdefiant/
 permalink_fr: /projets/xdefiant/
+project_id: c_xdefiant
 ---
-{% assign project_id = "c_xdefiant" %}
-{% assign project = site.data.projects[project_id] %}
-{% assign tproject = site.data.i18n[site.lang].projects[project_id] %}
-<div class="container-fluid mb-1">
-      <div class="row" style="background-image: url('/assets/images/xdefiant/pagebackground.webp'); z-index: -1;">
-        <div class="offset-lg-3 col-lg-6 bg-light mt-5 p-4">
-            <h1 class="display-1 mt-3" style="font-size: max(3em, 8vw);">{{ tproject.title }}</h1>
-            <p class="lead">{{ tproject.description }}</p>
-        {% assign slide-content-list = "
-        video;https://www.youtube.com/embed/VUv3ug_uHkE,
-        image;/assets/images/xdefiant/xdefiant_screen_1.webp,
-        image;/assets/images/xdefiant/xdefiant_screen_2.webp,
-        image;/assets/images/xdefiant/xdefiant_screen_3.png,
-        image;/assets/images/xdefiant/xdefiant_screen_4.png" | split: "," %}
-        {% assign thumbnails = "
-        /assets/images/xdefiant/thumbnail_video.png,
-        /assets/images/xdefiant/xdefiant_screen_1.webp,
-        /assets/images/xdefiant/xdefiant_screen_2.webp,
-        /assets/images/xdefiant/xdefiant_screen_3.png,
-        /assets/images/xdefiant/xdefiant_screen_4.png" | split: "," %}
-        {% include thumbnail-carousel.html slide-content=slide-content-list
-          thumbnail-images=thumbnails
-          carousel-id="fired-up-thumbnail-carousel" %}
-        </div>
-        <div class="col-lg-3 my-2 mt-3 sticky-lg-top py-2">
-          {% include project-info.html project=project tproject=tproject%}
-        </div>
-        <div class="offset-lg-3 col-lg-6 bg-light mb-5">
-          <div class="mt-3 p-3">
-          </div>
-        </div>
-    </div>
-</div>
-<div class="jumbotron mt-1 pt-1">
-  <div class="container-fluid">
-    <div class="row justify-content-md-center align-items-start">
-      <div class="col-md-6 p-3">
-        <div class="row my-2 p-2">
-          <h2 class="col-12">My missions</h2>
-          <hr class="col-12">
-          <div class="col-12">
-             {% tf projects/xdefiant/gameplay-programming.md %}
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
