--- a/projects/45-degrees.html
+++ b/projects/45-degrees.html
@@ -5,97 +5,5 @@ title: 45°
 namespace: 45-degrees
 permalink: /projects/45-degrees/
 permalink_fr: /projets/45-degrees/
+project_id: b_45
 ---
-{% assign project_id = "b_45" %}
-{% assign project = site.data.projects[project_id] %}
-{% assign tproject = site.data.i18n[site.lang].projects[project_id] %}
-<div class="container-fluid mb-1">
-  <div class="row" style="background-image: url('/assets/images/45_degrees/45_degrees_screen_5.webp'); z-index: -1;">
-    <div class="mask row p-0 m-0" style="background-color: hsla(0, 0%, 0%, 0.6)">
-      <div class="offset-lg-3 col-lg-6 bg-light mt-5 p-4">
-            <h1 class="display-1 mt-3" style="font-size: max(3em, 8vw);">{{ tproject.title }}</h1>
-            <p class="lead">{{ tproject.description }}</p>
-        {% assign slide-content-list = "
-        video;https://www.youtube-nocookie.com/embed/tQiUdatfsO0,
-        image;/assets/images/45_degrees/45_degrees_screen_1.png,
-        image;/assets/images/45_degrees/45_degrees_screen_2.png,
-        image;/assets/images/45_degrees/45_degrees_screen_3.png,
-        image;/assets/images/45_degrees/45_degrees_screen_5.png" | split: "," %}
-        {% assign thumbnails = "
-        /assets/images/45_degrees/thumbnail_video.png,
-        /assets/images/45_degrees/45_degrees_screen_1.png,
-        /assets/images/45_degrees/45_degrees_screen_2.png,
-        /assets/images/45_degrees/45_degrees_screen_3.png,
-        /assets/images/45_degrees/45_degrees_screen_5.png" | split: "," %}
-        {% include thumbnail-carousel.html slide-content=slide-content-list
-          thumbnail-images=thumbnails
-          carousel-id="fired-up-thumbnail-carousel" %}
-        </div>
-        <div class="col-lg-3 my-2 mt-3 sticky-lg-top py-2">
-          {% include project-info.html project=project tproject=tproject%}
-        </div>
-        <div class="offset-lg-3 col-lg-6 bg-light mb-5">
-          <div class="mt-3 p-3">
-              <h3>Our core intentions</h3>
-              <ul>
-                <li>Easy to learn/Hard to master</li>
-                <li>Skill based and fair</li>
-                <li>Frantic Race</li>
-              </ul>
-          </div>
-          </div>
-        </div>
-    </div>
-</div>
-<div class="jumbotron mt-1 mb-1 pb-1 pt-1">
-  <div class="container-fluid">
-    <div class="row justify-content-md-center align-items-start">
-      <div class="col-lg-6 p-3">
-        <div class="row my-2 p-2">
-          <h2 class="col-12">My missions</h2>
-          <hr class="col-12">
-          <div class="col-12">
-            <ul>
-              <li>Designing <b>core mechanics</b></li>
-              <li>Designing <b>3Cs</b></li>
-              <li>Designing <b>Metrics</b></li>
-              <li>Designing <b>Signs&Feedbacks</b></li>
-              <li><b>Integrating</b> Assets</li>
-              <li><b>Tweaking</b> values</li>
-              <li>Level Design</li>
-            </ul>
-          </div>
-        </div>
-        <!-- For this game, we wanted our players to have fun together discovering the many ways there are to put down the fire in a chaotic mood.
-        Players can use anything they like to extinguish the fire: real tools like an extinguisher, but also ordinary objects found in the house. From an aquarium to a cardboard filled in the pool.
-
-        <p>We were two game designers on this project, so we had to split
-            tasks and to organize ourselves to be more efficient.
-            </p> -->
-        <!--<div class="alert alert-primary alert-dismissible fade show" role="alert">
-
-           <i class="bi bi-info-circle-fill"></i> 
-           We were two game designers on this project. Go checkout the work of <b>Keltoum</b>!
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-             <span aria-hidden="true">&times;</span>
-          </button>
-        </div>-->
-      </div>
-    </div>
-  </div>
-</div>
-<div class="container-fluid my-3 py-3 row justify-content-center">
-  <div class="col-lg-6">
-  {% assign credits-content = "Amaury Butaux : Game Design,
-        Antoine Rey : Game Design,
-        Anna Messerschmitt : Graphic Design,
-        Théophile Lauseig : Graphic Design,
-        Robin Alonzo : Programming,
-        Horion Raphaël : Programming,
-        Evan Col-Eyraud : UX/UI,
-        Dorian Desplats : Sound Design / Music Composer,
-        Liam Hô : Project Management"
-  %}
-  {% include credits.html content=credits-content %}
-  </div>
-</div>
