--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="container text-center">
-  <h1>{% t 404-page.title %}</h1>
+  <h1>404</h1>
 
-  <p>{% t 404-page.description %}</strong></p>
+  <p><strong>Page not found :(</strong><br> The requested page could not be found.</p>
 </div>
